--- a/src/stylesheet/Hero.css
+++ b/src/stylesheet/Hero.css
@@ -33,3 +33,19 @@
   background: rgb(0, 234, 255);
   border: 2px solid transparent;
 }
+
+@media (max-width: 650px) {
+  .hero {
+    height: 80vh;
+    width: 95%;
+    background-size: 100% 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero .hero_box p {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 0.8rem;
+  }
+}
